<resources>
    <string name="app_name">OMY</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_locations">Locations</string>
    <string name="title_trips">Trips</string>
    <string name="title_photos">Photos</string>
    <string name="heading_past_trips">PAST TRIPS</string>
    <string name="heading_locations">LOCATIONS</string>
    <string name="heading_photos">PHOTOS</string>
    <string name="enter_trip_name_notification">Please enter the trip name</string>
    <string name="successfully_created_trip">Trip has been created successfully</string>
    <string name="hello_blank_fragment">Trip has been created successfully</string>
    <string name="weather_temperature">%1$s°C</string>
    <string name="trip_name_hint">TRIP NAME</string>
    <string name="trip_name_cancel">Cancel</string>
    <string name="trip_name_go">Go</string>
    <string name="trip_name_new_trip">NEW TRIP</string>
    <string name="general_information">General Information</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="description">Description</string>
    <string name="description_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="photos">Photos</string>
    <string name="reviews">Reviews</string>
    <string name="filter_bar">Sort:</string>
    <string name="photos_search_bar">Search Photos</string>
    <string name="heading_photo">PHOTO</string>
    <string name="heading_reviews">REVIEWS</string>
    <string name="heading_home">CREATE A NEW TRIP</string>
    <string name="map_resume_location">RESUME</string>
    <string name="temperature">Temperature: %1$s</string>
    <string name="map_dialog_cancel">"Cancel"</string>
    <string name="map_dialog_approve">"Finish trip"</string>
    <string name="home_fragment_title">Provide the trip title</string>
    <string name="start_trip_no_location_enabled">Please enable the location</string>
    <string name="heading_location">LOCATION</string>
    <string name="map_finish_trip">END TRIP</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="no_photos">No photos yet…</string>
    <string name="no_trips">No trips yet…</string>
    <string name="no_locations">No locations yet…</string>
    <string name="no_reviews">No reviews yet…</string>
    <string name="see_all">See all</string>
    <string name="add_a_review">Add a review</string>
    <string name="add_a_photo">Upload a photo</string>
    <string name="title_of_review">Title Of Review</string>
    <string name="rating">Rating :</string>
    <string name="out_of_5">/ 5</string>
    <string name="add_review">Add a review (%1$s)</string>
    <string name="add">Add</string>
    <string name="num_of_locations">Number of locations</string>
    <string-array name="sort_array">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>