<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:noHistory="true"
    android:excludeFromRecents="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".maps.MapCreatedActivity">

    <include
        android:id="@+id/include"
        layout="@layout/map_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/top_title_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/display_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_bold"
                android:gravity="start"
                android:text="@string/title"
                android:textAlignment="textStart"
                android:textColor="@color/darkgrey"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/display_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="end"
                android:layout_gravity="end"
                android:text="@string/temperature"
                android:textAlignment="textStart"
                android:textColor="@color/darkgrey"
                android:textSize="20sp"
                android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="@id/top_title_panel"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/map_end_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#545454"
        android:elevation="30dp"
        android:fontFamily="@font/nunito_extrabold"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:text="@string/map_finish_trip"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/top_title_panel"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/map_start_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#545454"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_baseline_my_location_24"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/map_pause_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#545454"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="8dp"
            android:visibility="gone"
            app:icon="@drawable/ic_baseline_location_disabled_24"
            app:iconTint="@color/white" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="@color/darkgreen"
        android:elevation="20dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:rippleColor="@color/white"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>