<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/trip_title_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/home_fragment_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/trip_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            app:cornerRadius="15dp"
            android:elevation="10dp"
            android:hint="@string/trip_name_hint"
            android:textSize="25sp"
            android:fontFamily="@font/nunito_medium"
            android:background="@drawable/edit_text_border"
            android:backgroundTint="@color/white"
            android:textColor="@color/darkgrey"
            android:inputType="textCapSentences|textAutoCorrect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/trip_title_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            app:cornerRadius="15dp"
            android:elevation="30dp"
            android:backgroundTint="#545454"
            android:drawableRight="@drawable/ic_outline_arrow_circle_right_24"
            android:textColor="@color/white"
            android:text="@string/trip_name_go"
            android:textSize="25sp"
            android:fontFamily="@font/nunito_extrabold" />

        <TextView
            android:id="@+id/no_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_darkgrey_background"
            android:fontFamily="@font/nunito_medium"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:visibility="gone"
            android:textColor="@color/white"
            android:text="@string/start_trip_no_location_enabled"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>