<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/location_big_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgreen"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/heading_photos"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/back_to_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_keyboard_arrow_left_48"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/location_big_label"
        app:layout_constraintStart_toStartOf="@id/location_big_label"
        android:clickable="true"/>

    <View
        android:id="@+id/location_sub_label"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="@color/darkgreen"
        app:layout_constraintTop_toBottomOf="@+id/location_big_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/location_sub_sub_label"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@drawable/shadow"
        app:layout_constraintTop_toBottomOf="@+id/location_sub_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/location_sub_sub_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/title"
                android:textColor="@color/darkgreen"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/photos"
                android:textColor="@color/darkgrey"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/no_photos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/no_photos"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/lightgrey"
            android:textStyle="italic"
            android:textSize="20sp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center_vertical"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photos_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
